adding routes for about page
